--- a/drip-store/index.html
+++ b/drip-store/index.html
@@ -1,15 +1,28 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drip-store</title>
   </head>
-
   <body>
+    <head class="header" >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <h1> Digital Store </h1>
+    <nav>
+      <ul></ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">produtos</a></li>
+      <li><a href="#">Categorias</a></li>
+      <li><a href="#">Mais pedidos</a></li>
+    </ul>
+    </nav>
+    <div class="cart">
+<a href="#">Carrinho</a>
+    </div>
+  </head>
   </body>
   
 </html>
