--- a/drip-store/index.html
+++ b/drip-store/index.html
@@ -23,6 +23,12 @@
 <a href="#">Carrinho</a>
     </div>
   </head>
+  <div class="banner">
+    <h1>Queima de estoque Nike 🔥</h1>
+    <p>Comece agora mesmo a sua compra com ofertas imperdíveis.</p>
+    <button>Ver Ofertas</button>
+</div>
+
   </body>
   
 </html>
